feat: 提升数据同步限制至500MB, 增加7天自动清理逻辑, 精简主页显示

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -407,7 +407,7 @@
 
         <div class="admin-section" style="margin-top: 30px;">
             <div class="section-header">
-                <div class="section-title">📝 全站申请记录 (实时)</div>
+                <div class="section-title">📝 全站申请记录 (实时) <span style="font-size: 12px; color: #888; margin-left: 10px; font-weight: normal;">(记录保留 7 天)</span></div>
                 <div style="display: flex; gap: 10px;">
                     <button class="btn-action" onclick="syncFromCloud()">🔄 刷新数据</button>
                     <button class="btn-action" onclick="exportToCSV()" style="background: #2196F3;">📥 导出 CSV</button>
