--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,8 @@
                     "1. 请确保角色ID输入准确无误。",
                     "2. 审核过程约需3秒，请耐心等待。",
                     "3. 如遇查询失败，请检查网络连接。",
-                    "4. 每日每个账号限查10次。"
+                    "4. 每日每个账号限查10次。",
+                    "5. 申请记录将在 7 天后自动清理。"
                 ],
                 applying: "申请中"
             },
@@ -1118,7 +1119,8 @@
                     "1. Ensure Character ID is accurate.",
                     "2. Process takes ~3s, please wait.",
                     "3. Check connection if failed.",
-                    "4. Limit 10 queries per day."
+                    "4. Limit 10 queries per day.",
+                    "5. Records will be deleted after 7 days."
                 ],
                 applying: "Processing"
             },
@@ -1141,7 +1143,8 @@
                     "1. IDが正確であることを確認してください。",
                     "2. 審査には約3秒かかります。",
                     "3. 失敗した場合は接続を確認してください。",
-                    "4. 1日10回まで照会可能です。"
+                    "4. 1日10回まで照会可能です。",
+                    "5. 申請記録は 7 日後に自動的に削除されます。"
                 ],
                 applying: "審査中"
             }
