feat: 优化服务器稳定性, 添加一键清空功能, 更新首页字段描述为'角色名称/ID'

--- a/index.html
+++ b/index.html
@@ -1481,9 +1481,9 @@
             resultsContainer.innerHTML = '';
 
             const i18nRes = {
-                zh: { id: "申请编号", name: "游戏名称", role: "角色名称", time: "提交时间", status: "申请情况", success: "申请成功", fail: "申请失败" },
-                en: { id: "Apply ID", name: "Game Name", role: "Role Name", time: "Submit Time", status: "Status", success: "Success", fail: "Failed" },
-                jp: { id: "申請番号", name: "ゲーム名", role: "キャラ名", time: "提出時間", status: "申請状況", success: "申請成功", fail: "申請失敗" }
+                zh: { id: "申请编号", name: "游戏名称", role: "角色名称/ID", time: "提交时间", status: "申请情况", success: "申请成功", fail: "申请失败" },
+                en: { id: "Apply ID", name: "Game Name", role: "Role Name/ID", time: "Submit Time", status: "Status", success: "Success", fail: "Failed" },
+                jp: { id: "申請番号", name: "ゲーム名", role: "キャラ名/ID", time: "提出時間", status: "申請状況", success: "申請成功", fail: "申請失敗" }
             };
             const labels = i18nRes[lang] || i18nRes.zh;
 
